--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
        <!-- navbar ends here -->
       <!-- Header -->
     <header style="height: 50vh; background: url(images/welcome.jpg) no-repeat center center; background-size: cover; -bottom: 20px; margin-bottom: 20px;">
-        <h3 id="welcome" class="headline">Welcome to  God's Own Country</h3>
+        <h3 class="headline">Welcome to  God's Own Country</h3>
     </header>
 
       <!-- Carousel starts here -->
