--- a/districts.html
+++ b/districts.html
@@ -172,7 +172,7 @@
 
           <div class="col">
             <section class="card mb-5 border-success" id="Pathanamthitta">
-              <img class="card-img-top img-fluid" src="images/Pathanamthitta.jpg"  alt="Pathanamthitta">
+              <img class="card-img-top img-fluid" src="images/pathanamthitta.jpg"  alt="Pathanamthitta">
               <div class="card-body d-flex and flex-column">
                 <h2 class="card-title card-img-overlay text-white">Pathanamthitta</h2>
                 <a class="list-group-item" href="#">Click for More Info</a>
@@ -192,7 +192,7 @@
       
           <div class="col">
             <section class="card mb-5 border-success" id="Thiruvananthapuram">
-              <img class="card-img-top img-fluid" src="images/Thiruvananthapuram.jpg"  alt="Thiruvananthapuram">
+              <img class="card-img-top img-fluid" src="images/thiruvananthapuram.jpg"  alt="Thiruvananthapuram">
               <div class="card-body d-flex and flex-column">
                 <h2 class="card-title card-img-overlay text-white">Thiruvananthapuram</h2>
                 <a class="list-group-item" href="#">Click for More Info</a>
