made forms responsive

--- a/SignUp.html
+++ b/SignUp.html
@@ -44,8 +44,8 @@
       <!-- SigUp -->
       <form class="container mt-5 mb-5">
         <div class="row">
-          <div class="col-3"></div>
-          <div class="col-6">
+          <div class="col-2 col-md-3"></div>
+          <div class="col-8 col-md-6">
             <section class="card bg-light border-success" id="form1">
               <div class="card-body d-flex and flex-column">
                        <div class="form-group">
