--- a/login.html
+++ b/login.html
@@ -45,8 +45,8 @@
       <!-- form -->
      <form class="container mt-5 mb-5">
         <div class="row">
-          <div class="col-4"></div>
-          <div class="col-4">
+          <div class="col-2 col-md-4"></div>
+          <div class="col-8 col-md-4">
             <section class="card bg-light border-success" id="form1">
               <div class="card-body d-flex and flex-column">
                 <h2 class="text-success text-center">Welcome back</h2> 
