--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login </title>
-    <link rel="stylesheet" href="CSS/style.css">
+    <!-- <link rel="stylesheet" href="CSS/style.css"> -->
     <link rel="stylesheet" href="CSS/animation.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -89,10 +89,10 @@
                             <a href="https://plus.google.com/"><img style="width: 50px" src="images/gPlus.png" alt="facebook"></a>
                             <a href="https://mail.google.com/"><img style="width: 48px" src="images/gmail.jpg" alt="facebook"></a>
                         <br/>
-                            <a class="text-decoration-none text-success" href="#">Info&nbsp;</a>
-                            <a class="text-decoration-none text-success" href="#">Support&nbsp;</a>
-                            <a class="text-decoration-none text-success" href="#">Terms of Use&nbsp;</a>
-                            <a class="text-decoration-none text-success" href="#">Privacy Policy&nbsp;</a>
+                            <a class="text-decoration-none text-white" href="#">Info&nbsp;</a>
+                            <a class="text-decoration-none text-white" href="#">Support&nbsp;</a>
+                            <a class="text-decoration-none text-white" href="#">Terms of Use&nbsp;</a>
+                            <a class="text-decoration-none text-white" href="#">Privacy Policy&nbsp;</a>
                       </div>
                 <hr />
             </div>
