--- a/login.html
+++ b/login.html
@@ -51,19 +51,20 @@
               <div class="card-body d-flex and flex-column">
                 <h2 class="text-success text-center">Welcome back</h2> 
                 <div class="form-group">
-                   <label for="exampleInputEmail1">Email address</label>
-                   <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                   <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                   <br/>
-                   <br/>
-                 </div>
+                  <label for="email">Email address</label>
+                  <input type="text" class="form-control" id="email"  placeholder="Enter email">
+                  <span id="emailValid"  class="badge displayBadge" ></span>
+                  <br> 
+                </div>
                  <div class="form-group">
-                   <label for="exampleInputPassword1">Password</label>
-                   <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                  <label for="exampleInputPassword1">Password</label>
+                  <input type="password" class="form-control passwordInput mb-2" id="PassEntry" placeholder="Enter Password">
+                  <input type="checkbox" onclick="ShowPassword()">Show Password
+                  <span id="StrengthDisp" class="badge displayBadge"></span>
                  </div>
                  <div class="form-check">
                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                   <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                   <label class="form-check-label" for="exampleCheck1">Remember me</label>
                    <br/>
                    <br/>
                  </div>
@@ -97,6 +98,6 @@
                 <hr />
             </div>
           </footer>
-    
+          <script src="scripts/login.js"></script>    
 </body>
 </html>
