--- a/SignUp.html
+++ b/SignUp.html
@@ -42,7 +42,7 @@
       </nav>
       
       <!-- SigUp -->
-      <form class="container mt-5 mb-5" action="login.html"  onsubmit="return validate()">
+      <form class="container mt-5 mb-5" action="login.html">
         <div class="row">
           <div class="col-1 col-md-3"></div>
           <div class="col-10 col-md-6">
