phone number instructions changed

--- a/SignUp.html
+++ b/SignUp.html
@@ -70,7 +70,7 @@
                         </div>
                         <input type="phone" class="form-control" id="phone" aria-describedby="phoneHelp" placeholder="Enter phone number">
                       </div>
-                      <small id="phonelHelp" class="form-text text-muted" style="display: none;">Phone number should contain 10 numbers only and must be in following format: 'xxxxxxxxx' or 'xxx-xxx-xxx' or 'xxx.xxx.xxx' or 'xxx xxx xxx'</small>
+                      <small id="phonelHelp" class="form-text text-muted" style="display: none;">Phone number should contain 10 numbers only and must be in following format: 'xxxxxxxxxx' or 'xxx-xxx-xxxx' or 'xxx.xxx.xxxx' or 'xxx xxx xxxx'</small>
                       <span id="phoneValid" class="badge displayBadge" ></span>
                         <br/>
                       </div>
